# HackathonAltSplicing

./: .gitignore  CONTRIBUTERS  LICENSE  README.md  Snakefile  pyproject.toml  requirements.txt
JbrowseConfig/: colorplugin.js  config.json  exampleplugin.js  exampleplugin2.js
analysis/: README  assign_descriptive_cell_types.Rmd  barcode_coverage_parallel_results.csv  cc_barcode.csv  cc_barcode_Mira_1.csv  cc_barcode_Mira_2.csv  cc_barcode_Mira_3.csv  cc_barcode_Mira_4.csv  genes_of_interest.csv  plot_desired_bed_rendering.py
analysis/jbrowse_env/: .gitignore  Neuron_5.bam.bai  SM_3_transcript_genes.gff3  SM_V10_1.fasta.fai  SM_genes_of_interest.gff3  Stem_G.bam.bai  config.json
analysis/plot_inputs/: Muscle_1.filtered.bed  Muscle_2.filtered.bed  (+3 more)
config/: snakemake.yaml
docs/: Python_env_MARS.txt  Regtools.txt  isoform_detetction.md
isoform_detection/: Snakefile  requirements.txt
jbrowse-plugin-bedfeaturecoloring/: README.md  index.js  package.json  test_config.json
jbrowse_plugin/: README.md  jbrowse_config.json  package.json  rollup.config.js
plotting/: plot.py  plot_by_score.py  plot_cell_types.py
scripts/: Bam_on_MARS.txt  Regtools.txt  check_coverage.py  merge_celltype_bams.py  original_cellranger_sbatch_V1.sh  parallel_coverage.py  read_to_transcripts_tsv.py  regtools_bed_by_celltype.ipynb  regtools_bed_by_celltype.py  regtools_bed_by_celltype.sh  rescale_by_gene.py  run_snakemake_array.sh  run_snakemake_single.sh  split_bam_by_CB.py
tests/: test_merge_samples_by_celltype.py  test_plotting.py  test_rs_bam_handling.py  test_wp3_add_ic_tag.py
(+29 files in other folders)
